<?xml version="1.0"?>
<package format="3">
  <name>navigation_action_msg</name>
  <version>0.0.0</version>
  <description>
    ROS 2 example for action interface
  </description>
  <maintainer email="huasheng_zyh@163.com">kint</maintainer>
  <license>Apache 2.0</license>
  <author email="huasheng_zyh@163.com">kint</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
